name:          xmlstudy
version:       0.3.0.1
-- synopsis:
-- description:

license:       ISC
license-file:  LICENSE
author:        Robert Lee
maintainer:    robert.lee@chicago.vc
copyright:     Robert Lee, © 2017-2022
homepage:      https://github.com/haskellGardener/XMLstudy
bug-reports:   https://github.com/haskellGardener/XMLstudy/issues

category:      Test
build-type:    Simple
stability:     alpha (experimental)
cabal-version: >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/haskellHacker/XMLstudy

library
  default-language: Haskell2010
  ghc-options: -Werror -O2
  -- -Werror -O2
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards
    , ScopedTypeVariables
    , TypeApplications
  hs-source-dirs: src
  exposed-modules:
      Builtin
    , AbstractDataModel
    , ComplexTypes
    , Lading
    , Parsers
    , Regex
    , RegexOut
    , Unique
  other-modules: Paths_xmlstudy
  build-depends:
      base >= 4.15 && < 5
    , array
    , attoparsec
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , charset
    , classy-prelude
    , containers
    , data-default-class
    , hourglass
    , pretty-simple
    , random
    , scientific
    , stm
    , template-haskell
    , text
    , xml-conduit
    , xml-hamlet
    , xml-types

executable xmlstudy-exe
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards
    , ScopedTypeVariables
    , TypeApplications
  hs-source-dirs: src-exe
  main-is:        Main.hs
  build-depends:
     base >= 4.15 && < 5
   , base64-bytestring
   , bytestring
   , classy-prelude
   , text
   , xml-conduit
   , xmlstudy

test-suite xmlstudy-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards
    , ScopedTypeVariables
    , TypeApplications
  hs-source-dirs: src-test
  main-is:        Main.hs
  build-depends:
     base >= 4.15 && < 5
   , base16-bytestring
   , base64-bytestring
   , bytestring
   , classy-prelude
   , hourglass
   , QuickCheck
   , scientific
   , smallcheck
   , tasty >= 0.11
   , tasty-hunit >= 0.9
   , tasty-quickcheck
   , tasty-smallcheck
   , text
   , xmlstudy
